--- a/Taskar.io/src/assets/main.css
+++ b/Taskar.io/src/assets/main.css
@@ -1,18 +1,12 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
   font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+  grid-template-columns: 100%;
+  grid-template-rows: 10vh auto;
 }
 
 @media (hover: hover) {
@@ -29,7 +23,7 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    /* grid-template-columns: 1fr 1fr; */
+    /* padding: 0 2rem; */
   }
 }
